Bug 911553 - Trap Proxy calls from ToPrimitive. r=bholley